--- a/a-house-divided.Rmd
+++ b/a-house-divided.Rmd
@@ -8,7 +8,7 @@ output:
   toc: FALSE
 abstract: "How do partisans think about their *own* party? Inter-party affective divisions have been widely identified by scholars of partisanship and public opinion. Increasingly, Republican and Democratic partisans have come to dislike members of their political outgroup. What has been lost in these discussions is an appraisal of individual's perceptions of and attitudes towards their in-party, which are generally held to be both stable and broadly positive. In this study, I leverage time-series survey data to identify substantively meaningful shifts in voters' attitudes towards their own party. Additionally, I conduct an original survey experiment interrogating the role played by primary elections in driving behavioral and attitudinal differences between co-partisans." 
 bibliography: references.bib
-thanks: "In no particular order, I express my gratitude for the feedback, guidance, and support provided by Hans Hassell, Brad Gomez, Doug Ahler, Jens Grosser, Kai Ou, Bob Jackson, Quintin Beazer, Gaurav Sood, Sarah Warren, Damian Boldt, Taylor Chewning, Olivia VanHousen, Braeden McNulty, William Thyer, and Kate Peirce. All advice is invaluable and all mistakes are my own."
+thanks: "In no particular order, I express my gratitude for the feedback, guidance, and support provided by Hans Hassell, Brad Gomez, Doug Ahler, Jens Grosser, Kai Ou, Bob Jackson, Quintin Beazer, Megan Skowronski, Gaurav Sood, Sarah Warren, Damian Boldt, Taylor Chewning, Olivia VanHousen, Braeden McNulty,  William Thyer, and Kate Peirce. All advice is invaluable and all mistakes are my own."
 header-includes:
 - \usepackage[margin=1in]{geometry}
 - \usepackage{caption}
@@ -81,7 +81,6 @@ theme_figs <- function(){
 }
 
 theme_set(theme_figs())
-
 
 ```
 
@@ -232,17 +231,20 @@ party_fts_ns_joined <- left_join(party_fts_ns, boot_sd_in)%>%
 
 # Introduction
 
-Recent work has challenged the prevailing characterization of intra-party attitudes as monolithic. @groenendyk2020 argue that intra-party polarization is occurring along ideological lines as self-identified moderate Democrats and Republicans become less enthusiastic about their parties while their co-partisans on the left and right respectively grow more favorable towards the party. I argue that ideology alone is insufficient to understand intra-party affect. Rather, I argue that intra-party competition is itself a driver of intra-party affective divisions. 
+It is well-documented that democratic accountability suffers under conditions of inter-party animus. What are the consequences when partisans harbor animosity towards their *own* party? @groenendyk2020 identify such cold partisans,  arguing that intra-party polarization is occurring along ideological lines as self-identified moderate Democrats and Republicans become less enthusiastic about their parties while their co-partisans on the left and right respectively grow more favorable towards the party. It is difficult to square the ideological polarization proposed by @groenendyk2020 with the qualitative features of the visible power struggle within the parties. I propose a supplementary explanation: that intra-party contests, particularly primary elections, complicate the in-party/in-group dynamic. Ultimately, weakening the in-party affinity and increasing the political disdain felt by those who find themselves on the losing side of these contests.
 
-Symbolic values and ideological identifiers have little relationship to individuals' actually held political beliefs [@zaller1992; @mcclosky1984; @ahler2018; @ahler2015; @mason2018]. While ideological identifiers  like "liberal" and "conservative" may be salient to individuals as *identities*, individuals have little idea of what views are typical of a party or ideology and which are heterodox. Partisans self identification as "moderate" or "extreme" may well inform their disposition towards their party but there is no guarantee that those individuals would recognize those who identify as their "co-ideologues" as such, or even be correct in placing their own views on an ideological spectrum [@converse1964; @kalmoe2020a]. Thus, characterization of partisan groups as internally ideologically polarized is conceptually fraught given the quality of evidence available [@fiorina2005; @fiorina2012; @ahler2018; @iyengar2012; @iyengar2018].
+Journalism and scholarship have been rife with accounts of the animosity exhibited by the activists and elected officials on the Democratic Party's left towards the more centrist mainline of the party [@azari2017; @thompson2020]. @masket2020 details lingering animosity between supporters and staffers for the 2016 campaigns of Bernie Sanders and Hillary Clinton (as well as a disdain for individuals associated with the Sanders campaign expressed by former Martin O'Malley organizers). In the Republican camp distinctions between "insurgents" and the "mainline" are not as clear, given that the insurgent candidate, Donald Trump, claimed victory in 2016. However, supporters of the 2016 Sanders and Trump candidacies were motivated largely by a distrust in government, not by commitment to a positive ideological program  [@dyck2018]. 
 
-Setting aside the issue of unreliable ideological self reports, there is reason to doubt that the extreme wings of the parties are the most enthusiastic supporters. Particularly since the 2016 Democratic Primaries, journalistic and scholarship have been rife with accounts of the animosity exhibited by the activists and elected officials on the party's left towards the more centrist mainline of the party [@azari2017; @thompson2020]. @masket2020 details lingering animosity between supporters and staffers for the 2016 campaigns of Bernie Sanders and Hillary Clinton (as well as a disdain for individuals associated with the Sanders campaign expressed by former Martin O'Malley organizers). In the Republican camp distinctions between "insurgents" and the "mainline" are not as clear, given that the insurgent candidate, Donald Trump, claimed victory in 2016. However, supporters of the 2016 Sanders and Trump candidacies were motivated largely by a distrust in government, not by commitment to a positive ideological program  [@dyck2018]. 
+Symbolic values and ideological identifiers have little relationship to individuals' actually held political beliefs [@zaller1992; @mcclosky1984; @ahler2018; @ahler2015; @mason2018]. While ideological identifiers  like "liberal" and "conservative" may be salient to individuals as *identities*, individuals have little idea of what views are typical of a party or ideology and which are heterodox. Partisans' self identification as "moderate" or "extreme" may well inform their disposition towards their party but there is no guarantee that those individuals would recognize those who identify as their "co-ideologues" as such, or even be correct in placing their own views on an ideological spectrum [@converse1964; @kalmoe2020a]. Thus, characterization of partisan groups as internally polarized on the basis of ideology is conceptually fraught given the quality of evidence available [@fiorina2005; @fiorina2012; @ahler2018; @iyengar2012; @iyengar2018].
+
+I argue that ideology alone is insufficient to understand intra-party affect. Rather, I argue that intra-party electoral competition is itself a driver of intra-party affective divisions. In this paper, I draw on cross-sectional data from the American National Elections Study (ANES) and an original survey experiment. I demonstrate that, while cold partisans are less likely to support their own party's candidates they are not disengaged from politics. Rather, cold partisans *are* more skeptical of government, more pessimistic about democracy, and more likely to support third party candidates. 
+
 
 ## Intra-party Competition
 
-It is difficult to square the ideological polarization proposed by @groenendyk2020 with the qualitative features of the visible power struggle within the parties. I propose a supplementary explanation: that intra-party contests, particularly primary elections, complicate the in-party/in-group dynamic. Ultimately, weakening the in-party affinity and increasing the political disdain felt by those who find themselves on the losing side of these contests.
 
 In the wake of her 2008 primary loss to Barack Obama, supporters of Democratic standard-bearer Hillary Clinton vocally rejected the election's results, pledging to throw support behind Republican nominee John McCain and spawning the "Party Unity My Ass" movement^[https://www.washingtonpost.com/wp-dyn/content/article/2008/06/26/AR2008062604162.html?tid=a_inl_manual] (it is difficult to say how many PUMAs followed through with their pledge). In a Salon article published in June of 2008^[https://www.salon.com/2008/06/23/pumas/], Rebecca Traister ties the PUMAs' anger to (among other things) the closeness of the election, perceived mistreatment by the media and DNC chair Howard Dean, and resentment at being made to feel like outsiders in their own party, saying: 
+
 >"They are mad at their party and its leaders because they feel this race has opened up a door, allowing people to rag on white women...in a way that demonstrates that women have a questionable place in liberalism and progressivism. Since when is the party supposedly interested in social justice not interested in the advancement of women to the highest office?"
 
 
@@ -267,25 +269,6 @@ To gain causal leverage over the question of primary election outcomes and parti
 Mturk samples are indeed noisier than samples obtained through more traditional methods [@johnson2020] and the population of Mturk workers is not a representative slice of the broader U.S. population [@ahler; @goodman2013]. These drawbacks make Mturk ill-suited for studies which aim to estimate the level of a parameter or quantity present in a population [@horton2011]. Fortunately, Mturk samples are much better suited to detecting *changes* in quantities. The increased noise in the Mturk sample works against statistical significance [@goodman2013] reducing the likelihood of a type-1 errors. Further, Mturk workers tend to perform *better* than other subject populations on attentiveness checks and consistently report their true preferences, provided that doing so does not jeopardize their payout [@hauser2016; @johnson2020]. As the purpose of this experiment is to interrogate shifts in partisans' affect and opinions agnostic to the absolute values of these attitudes, Mturk is an appropriate platform with which to recruit participants.
 
 Preference falsification by participants is also not of great concern as participants were not restricted from the survey on any basis other than location of their IP address (which must be based in the United States), thus there was no financial incentive to falsify preferences. Mturk workers *are* known to falsify their IP addresses [@ahler] in order to gain access to more and higher-paying tasks, as such it is quite likely that some responses in the study were gathered from participants outside the United States who likely do not have genuine preferences about U.S. political parties. Responses of this type can artificially inflate the variation in the sample, but there is no reason to think that the sample is systematically *biased* by these responses.
-
-## Survey Structure
-
-After agreeing to participate in the survey, subjects are asked to divulge their partisan affiliation. Subjects who self-identified as political independents are asked towards which political party they tend to lean. Following the insight of @klar2016 that leaning independents are best understood as "secret partisans" who think and behave very similarly to typical partisan voters, leaning independents are coded as partisans of whichever party they indicate a preference towards. Those who do not indicate a preference are paid for their time and excluded from all subsequent analyses---while the attitudes and actions of these true independents are no doubt important, they fall outside the scope conditions of this investigation.
-
-Next, participants are shown vignettes of two candidates and told that these candidates competed against one another in a 2020 congressional primary election for the participant's party. The names of these candidates are drawn from a pool of actual Democratic and Republican candidates who each participated in a congressional primary for an open seat in a district in which an out-party candidate eventually won election. In other words, none of the candidates whose names are used were members of congress during or after the 2020 election cycle. This set of names is chosen to minimize the chance of participants recognizing the candidates and noticing discrepencies between the counterfactual positions and the genuine positions of the candidate. Additionally, there is some risk that participants recruited through MTurk seek out external information for a task [@goodman2013]. The use of general-election losing non-incumbents' names reduces the accessibility of official policy statements, platforms, or campaign materials. 
-
-In addition to candidates' names, the candidate vignettes include basic personal information---party affiliation, occupation, marital status, and number of children---as well as a series of policy statements that participants are told "closely match the candidates' positions on a variety of issues." In reality, these policy positions are randomly assigned to each candidate from a set of two policy statements, one moderate and one extreme, across several issue areas. Republican participants are shown statements on climate change, abortion, policing, and taxes. Democrats are shown statements reflecting the candidates' views on the Green New Deal, marijuana legalization, policing, and taxes. 
-
-It is possible for candidates to take identical positions on any given issue and participants are informed of this in order to preempt any confusion. Importantly, this study is not concerned with *why* participants preferred one candidate over the other, simply with how a chosen candidate's fate influences individuals' partisan identity and sense of political efficacy. These candidate vignettes are intended to provide enough information to participants so as to make the candidates appear credible, and to allow the participant to form a preference for a candidate through a variety of mechanisms. Candidates' personal information is included so that participants do not view the vignettes solely as a collection of policy statements, but as a summary of a real person seeking public office.
-
-After reviewing the vignettes, participants are asked to "write a sentence or two explaining why [they] chose [their] candidate over the other". This free-response information is solicited from participants in order to slow down the participants' (who are often trying to complete tasks as quickly as possible) thought and to increase the cognitive investment in their choice of candidate. Real world primary elections drag on for weeks and months while participants in this experiment are exposed to the candidates only for a few minutes.
-
-After submitting their candidate preference, participants are randomly assigned to one of three groups. Those in the "Loss" treatment are told that their preferred candidate was defeated in the primary, those in the "Win" treatment are told that their candidate won the primary and went on to compete in the general election. Participants in the control group are simply thanked for selecting a candidate. 
-
-After receiving the treatment, participants were asked to rate the Democratic Party, Republican Party, and political independents on a feeling thermometer from 0-100. Participants were also asked a battery of political efficacy questions---how likely they would be to vote in the district's general election, the degree to which they trust the federal government to do what is right, and the degree to which they are satisfied with the way democracy works in the United States. After answering these questions the participants are debriefed that the candidates' personal information and policy preferences do not necessarily reflect those of the actual candidate, at which point the experiment concludes.
-
-In total, 473 participants were surveyed, of these only 18 identified as true independents, resulting in a final sample of $n = 455$. Summary statistics for these responses are presented in Table 2 and Table 3. Of note, while the distribution of in-party feeling thermometer scores is very similar to the distribution of scores drawn from the ANES time series study ($\mu = 80.9$), the distribution of out-party scores in the Mturk sample skew substantially higher than the mean out-party thermometers as reported in the ANES ($\mu = 54.5$).
-
 
 
 # Descriptive Analysis
@@ -514,15 +497,6 @@ These group differences hold important implications for politicians and party le
 
 ## Differences Between Primary Winners and Losers
 
-
-Table 1 presents the results of four OLS linearr regression models, estimating in-party and out-party feeling thermometers as a function of primary election vote choice and outcome, ideology relative to the in-party, standard demographic controls, and survey-year control variables^[The coefficients for these controls are unreported for the sake of presentation but are almost all negative and statistically significant. The full version of the table is included in the supporting information.]. 
-
-The measure of relative party ideology used in these models is constructed as the difference between respondents' ideological self-placement on the standard seven-point scale and their in-party. The scales are recoded by party such that for Democrats "1" is "Extremely Conservative" while "7" is "Extremely Liberal", for Republicans "1" is "Extremely Liberal" while "7" is "Extremely Conservative". This re-coding is done so that high values represent more extreme ideological positions for both sets of partisans. After recoding, the difference $Self - In-party$ is taken to measure the degree to which partisans perceive an ideological distance between themselves and their party. Finally, for ease of interpretation this measure is recoded so that all observations fall in $[-1, 1]$, where negative values indicate the respondent views themselves as more moderate than their party (e.g., a Republican who sees themselves as more liberal than the Republican party), while positive values indicate the respondent views themselves as more extreme than their party (e.g., a Democrat who reports being more liberal than the Democratic Party). The modal difference is 0; a plurality of respondents ascribe the same ideological identifier to themselves as to their party. Edge cases, for example, where a Republican identifies themselves as "Extremely Liberal" and their party as "Extremely Conservative" or vice-versa are exceedingly rare^[See APPENDIX ITEM for the distribution of ideological placements].
-
-Columns 1 and 2 of Tab. 1 coefficient estimates and standard errors for the model of affect towards the in-party, as measured by the partisan feeling thermometer for Democrats and Republicans respectively. Strikingly, those who supported a primary loser were almost 10 degrees colder towards their in-party than primary winners. By contrast, Democratic primary non-voters were only $4.2$ degrees colder than winners while Republican non-voters were $6.6$ degrees colder. Partisans who voted in their out-party's primary were, unsurprisingly, the coldest group: $\approx{17}$ degrees colder than winners on average. In other words, the marginal effect of supporting a losing candidate is about half that of *voting for an out-party candidate*.
-
-\clearpage
-
 ```{r, primary-tab-wrangle, include=FALSE}
 df_primaries <- read_rds("data/tidy-primaries.rds")%>%
 #	filter(pid_3 != "Independent" & !is.na(primary_vote_simple))%>%
@@ -541,7 +515,7 @@ df_primaries <- read_rds("data/tidy-primaries.rds")%>%
 
 ggplot(data = df_primaries, aes(x = ideo_self_in_dif_std, y = therm_inparty)) +
 	geom_point(position = position_jitter(width = .1, height = 10, seed = 1234))
-	
+
 
 gm_3 <- tibble::tribble(
   ~raw,        ~clean,          ~fmt,
@@ -588,6 +562,15 @@ tab_1_df <- df_primaries%>%
   			 glance = list(glance(fit)))
  
 ```
+
+Table 1 presents the results of four OLS linearr regression models, estimating in-party and out-party feeling thermometers as a function of primary election vote choice and outcome, ideology relative to the in-party, standard demographic controls, and survey-year control variables^[The coefficients for these controls are unreported for the sake of presentation but are almost all negative and statistically significant. The full version of the table is included in the supporting information.]. 
+
+The measure of relative party ideology used in these models is constructed as the difference between respondents' ideological self-placement on the standard seven-point scale and their in-party. The scales are recoded by party such that for Democrats "1" is "Extremely Conservative" while "7" is "Extremely Liberal", for Republicans "1" is "Extremely Liberal" while "7" is "Extremely Conservative". This re-coding is done so that high values represent more extreme ideological positions for both sets of partisans. After recoding, the difference $Self - In-party$ is taken to measure the degree to which partisans perceive an ideological distance between themselves and their party. Finally, for ease of interpretation this measure is recoded so that all observations fall in $[-1, 1]$, where negative values indicate the respondent views themselves as more moderate than their party (e.g., a Republican who sees themselves as more liberal than the Republican party), while positive values indicate the respondent views themselves as more extreme than their party (e.g., a Democrat who reports being more liberal than the Democratic Party). The modal difference is 0; a plurality of respondents ascribe the same ideological identifier to themselves as to their party. Edge cases, for example, where a Republican identifies themselves as "Extremely Liberal" and their party as "Extremely Conservative" or vice-versa are exceedingly rare^[See APPENDIX ITEM for the distribution of ideological placements].
+
+Columns 1 and 2 of Tab. 1 coefficient estimates and standard errors for the model of affect towards the in-party, as measured by the partisan feeling thermometer for Democrats and Republicans respectively. Strikingly, those who supported a primary loser were almost 10 degrees colder towards their in-party than primary winners. By contrast, Democratic primary non-voters were only $4.2$ degrees colder than winners while Republican non-voters were $6.6$ degrees colder. Partisans who voted in their out-party's primary were, unsurprisingly, the coldest group: $\approx{17}$ degrees colder than winners on average. In other words, the marginal effect of supporting a losing candidate is about half that of *voting for an out-party candidate*.
+
+\clearpage
+
 \clearpage
 ```{r primaries-table}
 
@@ -797,6 +780,26 @@ ggplot(m_df, aes(x = therm_inparty)) +
 ## Survey Experiment
 
 To address the problem of observational equivalence inherent to time series cross sectional data, I conduct an original survey experiment using Amazon's Mechanical Turk (Mturk) platform, manipulating the outcome of counterfactual congressional primary elections.
+
+
+## Survey Structure
+
+After agreeing to participate in the survey, subjects are asked to divulge their partisan affiliation. Subjects who self-identified as political independents are asked towards which political party they tend to lean. Following the insight of @klar2016 that leaning independents are best understood as "secret partisans" who think and behave very similarly to typical partisan voters, leaning independents are coded as partisans of whichever party they indicate a preference towards. Those who do not indicate a preference are paid for their time and excluded from all subsequent analyses---while the attitudes and actions of these true independents are no doubt important, they fall outside the scope conditions of this investigation.
+
+Next, participants are shown vignettes of two candidates and told that these candidates competed against one another in a 2020 congressional primary election for the participant's party. The names of these candidates are drawn from a pool of actual Democratic and Republican candidates who each participated in a congressional primary for an open seat in a district in which an out-party candidate eventually won election. In other words, none of the candidates whose names are used were members of congress during or after the 2020 election cycle. This set of names is chosen to minimize the chance of participants recognizing the candidates and noticing discrepencies between the counterfactual positions and the genuine positions of the candidate. Additionally, there is some risk that participants recruited through MTurk seek out external information for a task [@goodman2013]. The use of general-election losing non-incumbents' names reduces the accessibility of official policy statements, platforms, or campaign materials. 
+
+In addition to candidates' names, the candidate vignettes include basic personal information---party affiliation, occupation, marital status, and number of children---as well as a series of policy statements that participants are told "closely match the candidates' positions on a variety of issues." In reality, these policy positions are randomly assigned to each candidate from a set of two policy statements, one moderate and one extreme, across several issue areas. Republican participants are shown statements on climate change, abortion, policing, and taxes. Democrats are shown statements reflecting the candidates' views on the Green New Deal, marijuana legalization, policing, and taxes. 
+
+It is possible for candidates to take identical positions on any given issue and participants are informed of this in order to preempt any confusion. Importantly, this study is not concerned with *why* participants preferred one candidate over the other, simply with how a chosen candidate's fate influences individuals' partisan identity and sense of political efficacy. These candidate vignettes are intended to provide enough information to participants so as to make the candidates appear credible, and to allow the participant to form a preference for a candidate through a variety of mechanisms. Candidates' personal information is included so that participants do not view the vignettes solely as a collection of policy statements, but as a summary of a real person seeking public office.
+
+After reviewing the vignettes, participants are asked to "write a sentence or two explaining why [they] chose [their] candidate over the other". This free-response information is solicited from participants in order to slow down the participants' (who are often trying to complete tasks as quickly as possible) thought and to increase the cognitive investment in their choice of candidate. Real world primary elections drag on for weeks and months while participants in this experiment are exposed to the candidates only for a few minutes.
+
+After submitting their candidate preference, participants are randomly assigned to one of three groups. Those in the "Loss" treatment are told that their preferred candidate was defeated in the primary, those in the "Win" treatment are told that their candidate won the primary and went on to compete in the general election. Participants in the control group are simply thanked for selecting a candidate. 
+
+After receiving the treatment, participants were asked to rate the Democratic Party, Republican Party, and political independents on a feeling thermometer from 0-100. Participants were also asked a battery of political efficacy questions---how likely they would be to vote in the district's general election, the degree to which they trust the federal government to do what is right, and the degree to which they are satisfied with the way democracy works in the United States. After answering these questions the participants are debriefed that the candidates' personal information and policy preferences do not necessarily reflect those of the actual candidate, at which point the experiment concludes.
+
+In total, 473 participants were surveyed, of these only 18 identified as true independents, resulting in a final sample of $n = 455$. Summary statistics for these responses are presented in Table 2 and Table 3. Of note, while the distribution of in-party feeling thermometer scores is very similar to the distribution of scores drawn from the ANES time series study ($\mu = 80.9$), the distribution of out-party scores in the Mturk sample skew substantially higher than the mean out-party thermometers as reported in the ANES ($\mu = 54.5$).
+
 
 [NOTHING NEW AFTER THIS POINT]
 
