--- a/references.bib
+++ b/references.bib
@@ -83,7 +83,7 @@
 
 @book{ahler2015,
   title = {Donald Trump Is a Textbook Example of an Ideological Moderate},
-  author = {Ahler, Doug and Broockman, David},
+  author = {Ahler, Douglas J and Broockman, David E},
   editor = {Post, The Washington},
   year = {2015},
   month = dec
@@ -711,6 +711,23 @@
   number = {2},
   pages = {346--358},
   publisher = {{Elsevier}}
+}
+
+@article{gerber2010,
+  title = {Personality and {{Political Attitudes}}: Relationships across {{Issue Domains}} and {{Political Contexts}}},
+  shorttitle = {Personality and {{Political Attitudes}}},
+  author = {Gerber, Alan S. and Huber, Gregory A. and Doherty, David and Dowling, Conor M. and Ha, Shang E.},
+  year = {2010},
+  month = feb,
+  journal = {American Political Science Review},
+  volume = {104},
+  number = {1},
+  pages = {111--133},
+  issn = {0003-0554, 1537-5943},
+  doi = {10.1017/S0003055410000031},
+  abstract = {Previous research on personality traits and political attitudes has largely focused on the direct relationships between traits and ideological self-placement. There are theoretical reasons, however, to suspect that the relationships between personality traits and political attitudes (1) vary across issue domains and (2) depend on contextual factors that affect the meaning of political stimuli. In this study, we provide an explicit theoretical framework for formulating hypotheses about these differential effects. We then leverage the power of an unusually large national survey of registered voters to examine how the relationships between Big Five personality traits and political attitudes differ across issue domains and social contexts (as defined by racial groups). We confirm some important previous findings regarding personality and political ideology, find clear evidence that Big Five traits affect economic and social attitudes differently, show that the effect of Big Five traits is often as large as that of education or income in predicting ideology, and demonstrate that the relationships between Big Five traits and ideology vary substantially between white and black respondents.},
+  langid = {english},
+  file = {C\:\\Users\\robly\\Zotero\\storage\\WZN3JJ2Q\\Gerber et al. - 2010 - Personality and Political Attitudes Relationships.pdf}
 }
 
 @article{gilens2009,
@@ -1648,6 +1665,23 @@
   publisher = {{CQ Press}}
 }
 
+@article{mondak2010,
+  title = {Personality and {{Civic Engagement}}: An {{Integrative Framework}} for the {{Study}} of {{Trait Effects}} on {{Political Behavior}}},
+  shorttitle = {Personality and {{Civic Engagement}}},
+  author = {Mondak, Jeffery J. and Hibbing, Matthew V. and Canache, Damarys and Seligson, Mitchell A. and Anderson, Mary R.},
+  year = {2010},
+  month = feb,
+  journal = {American Political Science Review},
+  volume = {104},
+  number = {1},
+  pages = {85--110},
+  issn = {0003-0554, 1537-5943},
+  doi = {10.1017/S0003055409990359},
+  abstract = {People's enduring psychological tendencies are reflected in their traits. Contemporary research on personality establishes that traits are rooted largely in biology, and that the central aspects of personality can be captured in frameworks, or taxonomies, focused on five trait dimensions: openness to experience, conscientiousness, extraversion, agreeableness, and emotional stability. In this article, we integrate a five-factor view of trait structure within a holistic model of the antecedents of political behavior, one that accounts not only for personality, but also for other factors, including biological and environmental influences. This approach permits attention to the complex processes that likely underlie trait effects, and especially to possible trait\textendash situation interactions. Primary tests of our hypotheses draw on data from a 2006 U.S. survey, with supplemental tests introducing data from Uruguay and Venezuela. Empirical analyses not only provide evidence of the value of research on personality and politics, but also signal some of the hurdles that must be overcome for inquiry in this area to be most fruitful.},
+  langid = {english},
+  file = {C\:\\Users\\robly\\Zotero\\storage\\B4NKLYW6\\Mondak et al. - 2010 - Personality and Civic Engagement An Integrative F.pdf}
+}
+
 @book{morgan2015,
   title = {Counterfactuals and Causal Inference},
   author = {Morgan, Stephen L and Winship, Christopher},
@@ -1761,6 +1795,20 @@
   author = {Peterson, Erik and Goel, Sharad and Iyengar, Shanto},
   year = {2018},
   journal = {Working Paper. https://pcl.stanford.edu/research/2017/peterson-echo-chambers.pdf}
+}
+
+@article{pietryka2021,
+  title = {{{ANES Scales Often Don}}'t {{Measure What You Think They Measure}}},
+  author = {Pietryka, Matthew T and MacIntosh, Randall C.},
+  year = {2021},
+  month = may,
+  journal = {The Journal of Politics},
+  pages = {715251},
+  issn = {0022-3816, 1468-2508},
+  doi = {10.1086/715251},
+  abstract = {Political surveys often include multi-item scales to measure individual predispositions such as authoritarianism, egalitarianism, or racial resentment. Scholars use these scales to examine group differences in these predispositions, comparing women to men, rich to poor, or Republicans to Democrats. Such research implicitly assumes that, say, Republicans' and Democrats' responses to the egalitarianism scale measure the same construct in the same metric. This research rarely evaluates whether the data possess the characteristics necessary to justify this equivalence assumption. We present a framework to test this assumption and correct scales when it fails to hold. Examining 13 commonly used scales on the 2012 and 2016 ANES, we find widespread violations of the equivalence assumption. These violations often bias the estimated magnitude or direction of theoretically important group differences. These results suggest we must reevaluate what we think we know about the causes and consequences of authoritarianism, egalitarianism, and other predispositions.},
+  langid = {english},
+  file = {C\:\\Users\\robly\\Zotero\\storage\\NQFEI5QV\\Pietryka and MacIntosh - 2021 - ANES Scales Often Don't Measure What You Think The.pdf}
 }
 
 @article{poole1985,
@@ -1986,7 +2034,8 @@
   title = {The 1948\textendash 2016 {{ANES}} Cumulative Data File},
   author = {Studies, American National Election},
   year = {2017},
-  publisher = {{Stanford University and the University of Michigan}}
+  publisher = {{Stanford University and the University of Michigan}},
+  file = {C\:\\Users\\robly\\Zotero\\storage\\H7GPF5US\\Studies - 2017 - The 1948–2016 ANES cumulative data file.pdf}
 }
 
 @book{swain1995,
